# python-project-52

./: .gitignore  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml
task_manager/: forms.py  settings.py  urls.py  views.py
task_manager/labels/: admin.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/: admin.py  models.py  tests.py  urls.py  views.py
task_manager/task/: filters.py  forms.py  models.py  tests.py  views.py
task_manager/task_manager/: settings.py  urls.py
task_manager/users/: admin.py  forms.py  models.py  urls.py  views.py
templates/: index.html  labels_confirm_delete.html  labels_list.html  login.html  status_confirm_delete.html  status_form.html  status_list.html  task_list.html  user_confirm_delete.html  user_form.html  user_list.html
